test.output
Rules useless in parser due to conflicts

  121 non_loop_non_if_statement: assignment SEMICOLON
  122                          | initialization SEMICOLON
  123                          | declaration SEMICOLON
  124                          | function_call SEMICOLON
  125                          | block_structure SEMICOLON
  126                          | error_token SEMICOLON
  127                          | switch

  128 loop_statement: for
  129               | while
  130               | do_while


State 2 conflicts: 5 shift/reduce
State 38 conflicts: 4 reduce/reduce
State 44 conflicts: 4 reduce/reduce
State 46 conflicts: 4 reduce/reduce
State 47 conflicts: 4 reduce/reduce
State 62 conflicts: 4 reduce/reduce
State 64 conflicts: 10 shift/reduce, 5 reduce/reduce
State 105 conflicts: 10 shift/reduce, 5 reduce/reduce
State 119 conflicts: 9 shift/reduce, 5 reduce/reduce
State 123 conflicts: 21 reduce/reduce
State 124 conflicts: 21 reduce/reduce
State 125 conflicts: 21 reduce/reduce
State 126 conflicts: 21 reduce/reduce
State 127 conflicts: 10 shift/reduce, 5 reduce/reduce
State 150 conflicts: 10 shift/reduce, 5 reduce/reduce
State 162 conflicts: 21 reduce/reduce
State 163 conflicts: 21 reduce/reduce
State 164 conflicts: 21 reduce/reduce
State 165 conflicts: 21 reduce/reduce
State 166 conflicts: 21 reduce/reduce
State 167 conflicts: 21 reduce/reduce
State 197 conflicts: 9 shift/reduce, 5 reduce/reduce
State 220 conflicts: 10 shift/reduce, 5 reduce/reduce
State 234 conflicts: 10 shift/reduce, 5 reduce/reduce
State 239 conflicts: 1 shift/reduce
State 265 conflicts: 10 shift/reduce, 5 reduce/reduce
State 270 conflicts: 10 shift/reduce, 5 reduce/reduce
State 271 conflicts: 10 shift/reduce, 5 reduce/reduce
State 272 conflicts: 10 shift/reduce, 5 reduce/reduce
State 274 conflicts: 1 shift/reduce
State 298 conflicts: 10 shift/reduce, 5 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: declarations INT_TYPE_KEYWORD MAIN_KEYWORD OPENING_PARENTHESIS CLOSING_PARENTHESIS OPENING_CURLY_BRACE body return CLOSING_CURLY_BRACE

    2 declarations: declarations function_declaration
    3             | declarations declaration SEMICOLON
    4             | declarations initialization SEMICOLON
    5             | /* empty */

    6 function_declaration: VOID_TYPE_KEYWORD IDENTIFIER OPENING_PARENTHESIS function_arguments CLOSING_PARENTHESIS OPENING_CURLY_BRACE body return CLOSING_CURLY_BRACE
    7                     | type IDENTIFIER OPENING_PARENTHESIS function_arguments CLOSING_PARENTHESIS OPENING_CURLY_BRACE body return CLOSING_CURLY_BRACE

    8 function_arguments: type_identifier
    9                   | function_arguments COMMA type_identifier
   10                   | /* empty */

   11 body: body statement
   12     | statement
   13     | /* empty */

   14 statement: if
   15          | non_loop_non_if_statement
   16          | loop_statement

   17 non_if_statement: assignment SEMICOLON
   18                 | initialization SEMICOLON
   19                 | declaration SEMICOLON
   20                 | function_call SEMICOLON
   21                 | for
   22                 | while
   23                 | do_while
   24                 | switch
   25                 | block_structure SEMICOLON
   26                 | error_token SEMICOLON

   27 error_token: UNRECOGNIZED_TOKEN
   28            | RESERVED_IDENTIFIER

   29 block_structure: OPENING_CURLY_BRACE body CLOSING_CURLY_BRACE

   30 const: CONST_KEYWORD
   31      | /* empty */

   32 declaration: const type_identifier
   33            | const type_identifier OPENING_SQUARE_BRACKETS INTEGER_LITERAL CLOSING_SQUARE_BRACKETS

   34 assignment: IDENTIFIER ASSIGNMENT expr
   35           | IDENTIFIER ASSIGNMENT OPENING_SQUARE_BRACKETS expr_list CLOSING_SQUARE_BRACKETS
   36           | IDENTIFIER OPENING_SQUARE_BRACKETS expr CLOSING_SQUARE_BRACKETS ASSIGNMENT expr

   37 initialization: const type_identifier ASSIGNMENT expr
   38               | const type_identifier OPENING_SQUARE_BRACKETS INTEGER_LITERAL CLOSING_SQUARE_BRACKETS ASSIGNMENT OPENING_SQUARE_BRACKETS expr_list CLOSING_SQUARE_BRACKETS

   39 function_call: IDENTIFIER OPENING_PARENTHESIS expr_list CLOSING_PARENTHESIS

   40 expr_list: expr
   41          | expr_list COMMA expr
   42          | /* empty */

   43 expr: arithmetic_expr
   44     | array_element
   45     | bool_expr
   46     | function_call
   47     | bitwise_expr
   48     | literal

   49 array_element: IDENTIFIER OPENING_SQUARE_BRACKETS expr CLOSING_SQUARE_BRACKETS

   50 arithmetic_expr: arithmetic_expr PLUS arithmetic_term
   51                | arithmetic_expr MINUS arithmetic_term
   52                | arithmetic_term

   53 arithmetic_term: arithmetic_term ASTRISK arithmetic_factor
   54                | arithmetic_term DIVIDE arithmetic_factor
   55                | arithmetic_term MODULO arithmetic_factor
   56                | arithmetic_factor

   57 arithmetic_factor: postfix_expr
   58                  | MINUS arithmetic_factor

   59 postfix_expr: primary_expr
   60             | primary_expr INCREMENT
   61             | primary_expr DECREMENT

   62 primary_expr: numeric_literal
   63             | array_element
   64             | function_call
   65             | IDENTIFIER
   66             | OPENING_PARENTHESIS arithmetic_expr CLOSING_PARENTHESIS

   67 bool_expr: logical_or_expression

   68 logical_or_expression: logical_or_expression OR_KEYWORD logical_and_expression
   69                      | logical_and_expression

   70 logical_and_expression: logical_and_expression AND_KEYWORD logical_not_expression
   71                       | logical_not_expression

   72 logical_not_expression: NOT_KEYWORD logical_not_expression
   73                       | BOOLEAN_LITERAL
   74                       | comparison_expr

   75 comparison_expr: arithmetic_expr EQUAL arithmetic_expr
   76                | arithmetic_expr NOT_EQUAL arithmetic_expr
   77                | arithmetic_expr LESS arithmetic_expr
   78                | arithmetic_expr GREATER arithmetic_expr
   79                | arithmetic_expr LESS_OR_EQUAL arithmetic_expr
   80                | arithmetic_expr GREATER_OR_EQUAL arithmetic_expr
   81                | arithmetic_expr

   82 bitwise_expr: bitwise_expr BITWISE_OR bitwise_xor_expr
   83             | bitwise_xor_expr

   84 bitwise_xor_expr: bitwise_xor_expr BITWISE_XOR bitwise_and_expr
   85                 | bitwise_and_expr

   86 bitwise_and_expr: bitwise_and_expr BITWISE_AND bitwise_not_expr
   87                 | bitwise_not_expr

   88 bitwise_not_expr: BITWISE_NOT bitwise_not_expr
   89                 | arithmetic_expr

   90 return: RETURN_KEYWORD expr SEMICOLON

   91 literal: numeric_literal
   92        | CHARACTER_LITERAL
   93        | STRING_LITERAL
   94        | BOOLEAN_LITERAL

   95 numeric_literal: INTEGER_LITERAL
   96                | FLOAT_LITERAL

   97 type_identifier: type IDENTIFIER

   98 type: INT_TYPE_KEYWORD
   99     | FLOAT_TYPE_KEYWORD
  100     | STRING_TYPE_KEYWORD
  101     | CHAR_TYPE_KEYWORD
  102     | BOOL_TYPE_KEYWORD

  103 if: matched_statement
  104   | unmatched_statement

  105 matched_statement: IF_KEYWORD OPENING_PARENTHESIS bool_expr CLOSING_PARENTHESIS matched_statement ELSE_KEYWORD matched_statement
  106                  | non_if_statements

  107 non_if_statements: non_if_statement
  108                  | non_if_statements non_if_statement

  109 unmatched_statement: IF_KEYWORD OPENING_PARENTHESIS bool_expr CLOSING_PARENTHESIS body
  110                    | IF_KEYWORD OPENING_PARENTHESIS bool_expr CLOSING_PARENTHESIS matched_statement ELSE_KEYWORD unmatched_statement

  111 if_in_loop: matched_if_in_loop
  112           | unmatched_if_in_loop

  113 matched_if_in_loop: IF_KEYWORD OPENING_PARENTHESIS bool_expr CLOSING_PARENTHESIS loop_block ELSE_KEYWORD matched_if_in_loop
  114                   | non_if_statements

  115 unmatched_if_in_loop: IF_KEYWORD OPENING_PARENTHESIS bool_expr CLOSING_PARENTHESIS loop_block
  116                     | IF_KEYWORD OPENING_PARENTHESIS bool_expr CLOSING_PARENTHESIS matched_if_in_loop ELSE_KEYWORD unmatched_if_in_loop

  117 loop_block: OPENING_CURLY_BRACE body break_or_continue CLOSING_CURLY_BRACE

  118 loop_body_statement: if_in_loop
  119                    | non_loop_non_if_statement
  120                    | loop_statement

  121 non_loop_non_if_statement: assignment SEMICOLON
  122                          | initialization SEMICOLON
  123                          | declaration SEMICOLON
  124                          | function_call SEMICOLON
  125                          | block_structure SEMICOLON
  126                          | error_token SEMICOLON
  127                          | switch

  128 loop_statement: for
  129               | while
  130               | do_while

  131 break_or_continue: BREAK_KEYWORD SEMICOLON
  132                  | CONTINUE_KEYWORD SEMICOLON
  133                  | /* empty */

  134 loop_body_statements: loop_body_statement
  135                     | loop_body_statements loop_body_statement

  136 for: FOR_KEYWORD OPENING_PARENTHESIS loop_start SEMICOLON bool_expr SEMICOLON assignment CLOSING_PARENTHESIS OPENING_CURLY_BRACE loop_body_statements CLOSING_CURLY_BRACE

  137 loop_start: assignment
  138           | initialization

  139 while: WHILE_KEYWORD OPENING_PARENTHESIS bool_expr CLOSING_PARENTHESIS OPENING_CURLY_BRACE loop_body_statements CLOSING_CURLY_BRACE

  140 do_while: DO_KEYWORD OPENING_CURLY_BRACE loop_body_statements CLOSING_CURLY_BRACE WHILE_KEYWORD OPENING_PARENTHESIS bool_expr CLOSING_PARENTHESIS SEMICOLON

  141 switch: SWITCH_KEYWORD OPENING_PARENTHESIS expr CLOSING_PARENTHESIS OPENING_CURLY_BRACE case_list CLOSING_CURLY_BRACE
  142       | SWITCH_KEYWORD OPENING_PARENTHESIS expr CLOSING_PARENTHESIS OPENING_CURLY_BRACE case_list DEFAULT_KEYWORD COLON body CLOSING_CURLY_BRACE

  143 case_list: case_list case_statement
  144          | case_statement
  145          | /* empty */

  146 case_statement: CASE_KEYWORD IDENTIFIER COLON body
  147               | CASE_KEYWORD literal COLON body


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER_LITERAL (258) 33 38 95
FLOAT_LITERAL (259) 96
CHARACTER_LITERAL (260) 92
STRING_LITERAL (261) 93
BOOLEAN_LITERAL (262) 73 94
IDENTIFIER (263) 6 7 34 35 36 39 49 65 97 146
INT_TYPE_KEYWORD (264) 1 98
FLOAT_TYPE_KEYWORD (265) 99
STRING_TYPE_KEYWORD (266) 100
CHAR_TYPE_KEYWORD (267) 101
BOOL_TYPE_KEYWORD (268) 102
VOID_TYPE_KEYWORD (269) 6
IF_KEYWORD (270) 105 109 110 113 115 116
ELSE_KEYWORD (271) 105 110 113 116
FOR_KEYWORD (272) 136
WHILE_KEYWORD (273) 139 140
SWITCH_KEYWORD (274) 141 142
MAIN_KEYWORD (275) 1
DO_KEYWORD (276) 140
RETURN_KEYWORD (277) 90
CASE_KEYWORD (278) 146 147
CONST_KEYWORD (279) 30
BREAK_KEYWORD (280) 131
CONTINUE_KEYWORD (281) 132
DEFAULT_KEYWORD (282) 142
AND_KEYWORD (283) 70
OR_KEYWORD (284) 68
NOT_KEYWORD (285) 72
OPENING_CURLY_BRACE (286) 1 6 7 29 117 136 139 140 141 142
CLOSING_CURLY_BRACE (287) 1 6 7 29 117 136 139 140 141 142
OPENING_PARENTHESIS (288) 1 6 7 39 66 105 109 110 113 115 116 136 139
    140 141 142
CLOSING_PARENTHESIS (289) 1 6 7 39 66 105 109 110 113 115 116 136 139
    140 141 142
OPENING_SQUARE_BRACKETS (290) 33 35 36 38 49
CLOSING_SQUARE_BRACKETS (291) 33 35 36 38 49
COMMA (292) 9 41
ASTRISK (293) 53
PLUS (294) 50
MINUS (295) 51 58
DIVIDE (296) 54
MODULO (297) 55
INCREMENT (298) 60
DECREMENT (299) 61
ASSIGNMENT (300) 34 35 36 37 38
EQUAL (301) 75
NOT_EQUAL (302) 76
LESS_OR_EQUAL (303) 79
GREATER_OR_EQUAL (304) 80
LESS (305) 77
GREATER (306) 78
BITWISE_AND (307) 86
BITWISE_OR (308) 82
BITWISE_XOR (309) 84
BITWISE_NOT (310) 88
COLON (311) 142 146 147
SEMICOLON (312) 3 4 17 18 19 20 25 26 90 121 122 123 124 125 126 131
    132 136 140
UNRECOGNIZED_TOKEN (313) 27
RESERVED_IDENTIFIER (314) 28


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 1, on right: 0
declarations (62)
    on left: 2 3 4 5, on right: 1 2 3 4
function_declaration (63)
    on left: 6 7, on right: 2
function_arguments (64)
    on left: 8 9 10, on right: 6 7 9
body (65)
    on left: 11 12 13, on right: 1 6 7 11 29 109 117 142 146 147
statement (66)
    on left: 14 15 16, on right: 11 12
non_if_statement (67)
    on left: 17 18 19 20 21 22 23 24 25 26, on right: 107 108
error_token (68)
    on left: 27 28, on right: 26 126
block_structure (69)
    on left: 29, on right: 25 125
const (70)
    on left: 30 31, on right: 32 33 37 38
declaration (71)
    on left: 32 33, on right: 3 19 123
assignment (72)
    on left: 34 35 36, on right: 17 121 136 137
initialization (73)
    on left: 37 38, on right: 4 18 122 138
function_call (74)
    on left: 39, on right: 20 46 64 124
expr_list (75)
    on left: 40 41 42, on right: 35 38 39 41
expr (76)
    on left: 43 44 45 46 47 48, on right: 34 36 37 40 41 49 90 141
    142
array_element (77)
    on left: 49, on right: 44 63
arithmetic_expr (78)
    on left: 50 51 52, on right: 43 50 51 66 75 76 77 78 79 80 81 89
arithmetic_term (79)
    on left: 53 54 55 56, on right: 50 51 52 53 54 55
arithmetic_factor (80)
    on left: 57 58, on right: 53 54 55 56 58
postfix_expr (81)
    on left: 59 60 61, on right: 57
primary_expr (82)
    on left: 62 63 64 65 66, on right: 59 60 61
bool_expr (83)
    on left: 67, on right: 45 105 109 110 113 115 116 136 139 140
logical_or_expression (84)
    on left: 68 69, on right: 67 68
logical_and_expression (85)
    on left: 70 71, on right: 68 69 70
logical_not_expression (86)
    on left: 72 73 74, on right: 70 71 72
comparison_expr (87)
    on left: 75 76 77 78 79 80 81, on right: 74
bitwise_expr (88)
    on left: 82 83, on right: 47 82
bitwise_xor_expr (89)
    on left: 84 85, on right: 82 83 84
bitwise_and_expr (90)
    on left: 86 87, on right: 84 85 86
bitwise_not_expr (91)
    on left: 88 89, on right: 86 87 88
return (92)
    on left: 90, on right: 1 6 7
literal (93)
    on left: 91 92 93 94, on right: 48 147
numeric_literal (94)
    on left: 95 96, on right: 62 91
type_identifier (95)
    on left: 97, on right: 8 9 32 33 37 38
type (96)
    on left: 98 99 100 101 102, on right: 7 97
if (97)
    on left: 103 104, on right: 14
matched_statement (98)
    on left: 105 106, on right: 103 105 110
non_if_statements (99)
    on left: 107 108, on right: 106 108 114
unmatched_statement (100)
    on left: 109 110, on right: 104 110
if_in_loop (101)
    on left: 111 112, on right: 118
matched_if_in_loop (102)
    on left: 113 114, on right: 111 113 116
unmatched_if_in_loop (103)
    on left: 115 116, on right: 112 116
loop_block (104)
    on left: 117, on right: 113 115
loop_body_statement (105)
    on left: 118 119 120, on right: 134 135
non_loop_non_if_statement (106)
    on left: 121 122 123 124 125 126 127, on right: 15 119
loop_statement (107)
    on left: 128 129 130, on right: 16 120
break_or_continue (108)
    on left: 131 132 133, on right: 117
loop_body_statements (109)
    on left: 134 135, on right: 135 136 139 140
for (110)
    on left: 136, on right: 21 128
loop_start (111)
    on left: 137 138, on right: 136
while (112)
    on left: 139, on right: 22 129
do_while (113)
    on left: 140, on right: 23 130
switch (114)
    on left: 141 142, on right: 24 127
case_list (115)
    on left: 143 144 145, on right: 141 142 143
case_statement (116)
    on left: 146 147, on right: 143 144


state 0

    0 $accept: . program $end

    $default  reduce using rule 5 (declarations)

    program       go to state 1
    declarations  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: declarations . INT_TYPE_KEYWORD MAIN_KEYWORD OPENING_PARENTHESIS CLOSING_PARENTHESIS OPENING_CURLY_BRACE body return CLOSING_CURLY_BRACE
    2 declarations: declarations . function_declaration
    3             | declarations . declaration SEMICOLON
    4             | declarations . initialization SEMICOLON

    INT_TYPE_KEYWORD     shift, and go to state 4
    FLOAT_TYPE_KEYWORD   shift, and go to state 5
    STRING_TYPE_KEYWORD  shift, and go to state 6
    CHAR_TYPE_KEYWORD    shift, and go to state 7
    BOOL_TYPE_KEYWORD    shift, and go to state 8
    VOID_TYPE_KEYWORD    shift, and go to state 9
    CONST_KEYWORD        shift, and go to state 10

    INT_TYPE_KEYWORD     [reduce using rule 31 (const)]
    FLOAT_TYPE_KEYWORD   [reduce using rule 31 (const)]
    STRING_TYPE_KEYWORD  [reduce using rule 31 (const)]
    CHAR_TYPE_KEYWORD    [reduce using rule 31 (const)]
    BOOL_TYPE_KEYWORD    [reduce using rule 31 (const)]

    function_declaration  go to state 11
    const                 go to state 12
    declaration           go to state 13
    initialization        go to state 14
    type                  go to state 15


state 3

    0 $accept: program $end .

    $default  accept


state 4

    1 program: declarations INT_TYPE_KEYWORD . MAIN_KEYWORD OPENING_PARENTHESIS CLOSING_PARENTHESIS OPENING_CURLY_BRACE body return CLOSING_CURLY_BRACE
   98 type: INT_TYPE_KEYWORD .

    MAIN_KEYWORD  shift, and go to state 16

    $default  reduce using rule 98 (type)


state 5

   99 type: FLOAT_TYPE_KEYWORD .

    $default  reduce using rule 99 (type)


state 6

  100 type: STRING_TYPE_KEYWORD .

    $default  reduce using rule 100 (type)


state 7

  101 type: CHAR_TYPE_KEYWORD .

    $default  reduce using rule 101 (type)


state 8

  102 type: BOOL_TYPE_KEYWORD .

    $default  reduce using rule 102 (type)


state 9

    6 function_declaration: VOID_TYPE_KEYWORD . IDENTIFIER OPENING_PARENTHESIS function_arguments CLOSING_PARENTHESIS OPENING_CURLY_BRACE body return CLOSING_CURLY_BRACE

    IDENTIFIER  shift, and go to state 17


state 10

   30 const: CONST_KEYWORD .

    $default  reduce using rule 30 (const)


state 11

    2 declarations: declarations function_declaration .

    $default  reduce using rule 2 (declarations)


state 12

   32 declaration: const . type_identifier
   33            | const . type_identifier OPENING_SQUARE_BRACKETS INTEGER_LITERAL CLOSING_SQUARE_BRACKETS
   37 initialization: const . type_identifier ASSIGNMENT expr
   38               | const . type_identifier OPENING_SQUARE_BRACKETS INTEGER_LITERAL CLOSING_SQUARE_BRACKETS ASSIGNMENT OPENING_SQUARE_BRACKETS expr_list CLOSING_SQUARE_BRACKETS

    INT_TYPE_KEYWORD     shift, and go to state 18
    FLOAT_TYPE_KEYWORD   shift, and go to state 5
    STRING_TYPE_KEYWORD  shift, and go to state 6
    CHAR_TYPE_KEYWORD    shift, and go to state 7
    BOOL_TYPE_KEYWORD    shift, and go to state 8

    type_identifier  go to state 19
    type             go to state 20


state 13

    3 declarations: declarations declaration . SEMICOLON

    SEMICOLON  shift, and go to state 21


state 14

    4 declarations: declarations initialization . SEMICOLON

    SEMICOLON  shift, and go to state 22


state 15

    7 function_declaration: type . IDENTIFIER OPENING_PARENTHESIS function_arguments CLOSING_PARENTHESIS OPENING_CURLY_BRACE body return CLOSING_CURLY_BRACE

    IDENTIFIER  shift, and go to state 23


state 16

    1 program: declarations INT_TYPE_KEYWORD MAIN_KEYWORD . OPENING_PARENTHESIS CLOSING_PARENTHESIS OPENING_CURLY_BRACE body return CLOSING_CURLY_BRACE

    OPENING_PARENTHESIS  shift, and go to state 24


state 17
